external-crates/move/crates/move-compiler/tests/move_2024/parser/ability_modifier_postfix_missing_commas.move
module 0x42::M {
    // Ability declarations require commas between them.
    public struct Foo {} has store copy;
}
